# project-chimera

./: .gitignore  .pre-commit-config.yaml  OVERFITTING_FIXES_SUMMARY.md  README.md  RUNBOOK.md  TROUBLESHOOTING.md  presentation_findings.md  project_scope.md  project_timeline.md  pyproject.toml  tasks.md  test_overfitting_fixes.py  validate_changes.py
.github/workflows/: ci.yml
data/: README.md
data/ag_news/: README.md
data/ag_news/test/: test.parquet
data/ag_news/train/: train.parquet
data/ag_news/validation/: validation.parquet
runs/: phase8_long_dense_dense.json  phase8_smoke_dense_and_moe.json
scripts/: dev_bootstrap_macos.sh  diagnose_training.py  download_ag_news.py  health_check.py  quick_start.py  run_macos.sh  setup_project_structure.py  smoke_test_data_pipeline.py  test_macos.sh  train.py  train_agnews.py  train_baseline_smoke.py
src/project_chimera/: __init__.py  baseline.py  trainer.py
src/project_chimera/data/: ag_news.py  preprocess.py
src/project_chimera/moe/: experts.py  gating.py  layer.py
src/project_chimera/utils/: device.py  repro.py
tests/: test_data.py  test_device_and_seed.py  test_model.py  test_moe.py
