[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-chimera"
version = "0.1.0"
description = "MoE vs Dense Transformer experimentation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "none" }
authors = [{ name = "Project Chimera Team" }]
dependencies = [
  "torch",
  "numpy",
  "tqdm",
  "pyyaml",
  "transformers>=4.42.0",
  "tokenizers>=0.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit",
  "huggingface-hub>=0.23.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 310

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = true